# atomtopubsub

./: .gitignore  README.md  atomtopubsub.service  config.example.json  pyproject.toml
src/atomtopubsub/: __init__.py  __main__.py  config.py  feedparser.py  scheduler.py  xmpp.py
tests/: __init__.py  test_config.py  test_feedparser.py
