[project]
name = "atomtopubsub"
version = "2.0.0"
description = "Parse Atom feeds and publish to XMPP Pubsub nodes"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Original: edhelas", email = "edhelas@movim.eu"}]
dependencies = [
    "feedparser>=6.0.0",
    "slixmpp>=1.8.0",
    "apscheduler>=3.10.0",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
atomtopubsub = "atomtopubsub.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
